Prototype/static/styles/addSubject.css
.ui.container.main-container {
    width: auto !important;
    max-width: 1080px !important;
    padding: 0.75em;
}

h2.header-text {
    font-family: 'Kanit', sans-serif;
    text-align: center;
}

form[name="subject-search"] {
    text-align: center;
}

form[name="subject-search"] .ui.input {
    width: 100%;
}

form[name="confirm-subject"] .info {
    display: flex;
    justify-content: space-between;
    margin-bottom: 5px;
}

form[name="confirm-subject"] .info .header {
    width: 30%;
}

form[name="confirm-subject"] .info .detail {
    margin-right: auto;
}

.subject-canvas {
    display: flex;
}

.subject-container {
    border: 1px solid #bfbfbf;
    border-radius: 10px;
    margin-bottom: 10px;
    width: 49%;
    /* background-color: red; */
}

.subject-container>.header {
    display: flex;
    padding: 10px;
    /* font-weight: 900; */
}


.subject-container>.header>.subject-id {
    width: 30%;
}

.subject-container>.header>.subject-name,
.subject-container>.header>.subject-id {
    font-size: 1.15em;
}

.header>h3 {
    margin: 0%;
}

.subject-container>.content {
    padding: 10px;
    background: oldlace;
}

.subject-container>.content .section {
    display: flex;
    justify-content: space-between;
}

.-green {
    color: #9ad100;
}

.confirm-button {
    background-color: #9ad100;
    color: white;
    width: 25%;
    font-family: 'Kanit' !important;
}

#trigger-button {
    background-color: #9ad100;
    color: white;
}

.ui.modal.confirm-modal>.content,
.ui.modal.confirm-modal>.button-group {
    border: none;
    text-align: center;
}

.ui.modal.confirm-modal>.button-group>.confirm-button {
    background-color: #9ad100;
    color: white;
    width: unset;
    font-family: 'Kanit' !important;
}

.ui.modal.confirm-modal>.content {
    padding: 1rem;
    padding-top: 2rem;
}

.ui.modal.confirm-modal>.button-group {
    padding: 1rem;
}

.ui.modal.confirm-modal>.button-group button {
    font-family: 'Kanit' !important;
}

.ui.modal.confirm-modal>.content>.subject-name {
    font-weight: bold;
}

.ui.modals.confirm-modal>.actions {
    justify-content: center;
}

@media screen and (max-width: 699px) {
    .ui.container.main-container {
        padding: 0;
    }

    .subject-container {
        width: 100%;
    }

    .confirm-button {
        width: 50%;
    }
}

